syntax = "proto3";

import "const.proto";
import "google/api/annotations.proto";

package engine;

service AgentSkillService {
    // Create AgentSkill
    rpc CreateAgentSkill(CreateAgentSkillRequest) returns (AgentSkill) {
        option (google.api.http) = {
            post: "/call_center/agents/{agent_id}/skills"
            body: "*"
        };
    }
    // List of AgentSkill
    rpc SearchAgentSkill(SearchAgentSkillRequest) returns (ListAgentSkill) {
        option (google.api.http) = {
            get: "/call_center/agents/{agent_id}/skills"
        };
    }
    // AgentSkill item
    rpc ReadAgentSkill(AgentSkillItemRequest) returns (AgentSkill) {
        option (google.api.http) = {
            get: "/call_center/agents/{agent_id}/skills/{id}"
        };
    }
    // Update AgentSkill
    rpc UpdateAgentSkill(UpdateAgentSkillRequest) returns (AgentSkill) {
        option (google.api.http) = {
            put: "/call_center/agents/{agent_id}/skills/{id}"
            body: "*"
        };
    }
    // Remove AgentSkill
    rpc DeleteAgentSkill(DeleteAgentSkillRequest) returns (AgentSkill) {
        option (google.api.http) = {
            delete: "/call_center/agents/{agent_id}/skills/{id}"
        };
    }
}

message UpdateAgentSkillRequest {
    int64 id = 1;
    int64 domain_id = 2;
    int64 agent_id = 3;
    Lookup skill = 4;
    int32 capacity = 5;
}

message SearchAgentSkillRequest {
    int64 domain_id = 1;
    int64 agent_id = 2;
    int32 size = 3;
    int32 page = 4;
}

message CreateAgentSkillRequest {
    int64 domain_id = 1;
    int64 agent_id = 2;
    Lookup skill = 3;
    int32 capacity = 4;
}

message AgentSkillItemRequest {
    int64 id = 1;
    int64 domain_id = 2;
    int64 agent_id = 3;
}

message DeleteAgentSkillRequest {
    int64 id = 1;
    int64 domain_id = 2;
    int64 agent_id = 3;
}

message AgentSkillItem {
    int64 id = 1;
    Lookup skill = 2;
    int32 capacity = 3;
}

message AgentSkill {
    int64 id = 1;
    int64 domain_id = 2;
    int64 created_at = 3;
    Lookup created_by = 4;
    int64 updated_at = 5;
    Lookup updated_by = 6;
    Lookup agent = 7;
    Lookup skill = 8;
    int32 capacity = 9;
}

message ListAgentSkill {
    repeated AgentSkillItem items = 1;
}