syntax = "proto3";

import "google/api/annotations.proto";

package engine;

service AgentTeamService {
    // Create AgentTeam
    rpc CreateAgentTeam(CreateAgentTeamRequest) returns (AgentTeam) {
        option (google.api.http) = {
            post: "/call_center/teams"
            body: "*"
        };
    }
    // List of AgentTeam
    rpc SearchAgentTeam(SearchAgentTeamRequest) returns (ListAgentTeam) {
        option (google.api.http) = {
            get: "/call_center/teams"
        };
    }
    // AgentTeam item
    rpc ReadAgentTeam(ReadAgentTeamRequest) returns (AgentTeam) {
        option (google.api.http) = {
            get: "/call_center/teams/{id}"
        };
    }
    // Update AgentTeam
    rpc UpdateAgentTeam(UpdateAgentTeamRequest) returns (AgentTeam) {
        option (google.api.http) = {
            put: "/call_center/teams/{id}"
            body: "*"
        };
    }
    // Remove AgentTeam
    rpc DeleteAgentTeam(DeleteAgentTeamRequest) returns (AgentTeam) {
        option (google.api.http) = {
            delete: "/call_center/teams/{id}"
        };
    }
}

message DeleteAgentTeamRequest {
    int64 id = 1;
    int64 domain_id = 2;
}

message UpdateAgentTeamRequest {
    int64 id = 1;
    string name = 2;
    string description = 3;
    string strategy = 4;
    int32 max_no_answer = 5;
    int32 wrap_up_time = 6;
    int32 reject_delay_time = 7;
    int32 busy_delay_time = 8;
    int32 no_answer_delay_time = 9;
    int32 call_timeout = 10;

    int64 domain_id = 11;
}

message ReadAgentTeamRequest {
    int64 id = 1;
    int64 domain_id = 2;
}

message SearchAgentTeamRequest {
    int32 page = 1;
    int32 size = 2;

    int64 domain_id = 3;
}

message CreateAgentTeamRequest {
    string name = 1;
    string description = 2;
    string strategy = 3;
    int32 max_no_answer = 4;
    int32 wrap_up_time = 5;
    int32 reject_delay_time = 6;
    int32 busy_delay_time = 7;
    int32 no_answer_delay_time = 8;
    int32 call_timeout = 9;

    int64 domain_id = 10;
}

message AgentTeam {
    int64 id = 1;
    int64 domain_id = 2;
    string name = 3;
    string description = 4;
    string strategy = 5;
    int32 max_no_answer = 6;
    int32 wrap_up_time = 7;
    int32 reject_delay_time = 8;
    int32 busy_delay_time = 9;
    int32 no_answer_delay_time = 10;
    int32 call_timeout = 11;
    int64 updated_at = 12;
}

message ListAgentTeam {
    repeated AgentTeam items = 1;
}